ref: separate examples and schemas into json from openapi
with cleaner responses, examples and cleaner controllers